--- a/YoutubeExplodeDemoWpf/App.xaml
+++ b/YoutubeExplodeDemoWpf/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="YoutubeExplode.DemoWpf.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:converters="clr-namespace:YoutubeExplode.DemoWpf.ViewModels.Converters"
+             xmlns:converters="clr-namespace:YoutubeExplode.DemoWpf.Converters"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:demoWpf="clr-namespace:YoutubeExplode.DemoWpf"
              xmlns:ignore="http://www.galasoft.ch/ignore"
